--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
     <div class="join-box">
       <input id="username" placeholder="Username">
       <button id="join">Join</button>
+      <button id="leave">Leave</button>
     </div>
 
     <div class="users">
