--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>ChatON</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <div class="container">
 
-  <h1>🔥 ChatON</h1>
+    <header>🔥 ChatON</header>
 
-  <!-- JOIN -->
-  <div id="joinBox">
-    <input id="username" placeholder="Enter username" />
-    <button onclick="join()">Join</button>
-    <p id="error"></p>
-  </div>
-
-  <!-- CHAT -->
-  <div id="chatBox" hidden>
-    <div id="users"></div>
-
-    <div id="messages"></div>
-
-    <div class="inputRow">
-      <input id="msg" placeholder="Type message..." />
-      <button onclick="sendMessage()">Send</button>
+    <div class="join-box">
+      <input id="username" placeholder="Username">
+      <button id="join">Join</button>
+      <button id="leave">Leave</button>
+      <button onclick="startVoice()">🎙 Join Voice</button>
+      <button onclick="toggleMute()">🔇 Mute</button>
     </div>
 
-    <button onclick="startVoice()">🎙 Join Voice</button>
-    <button onclick="toggleMute()">🔇 Mute</button>
+    <div class="users">
+      <h3>👥 In Call</h3>
+      <ul id="users"></ul>
+    </div>
+
+    <div class="chat">
+      <div id="chat" class="messages"></div>
+
+      <div class="send-box">
+        <input id="msg" placeholder="Message">
+        <button id="send">Send</button>
+      </div>
+    </div>
+
   </div>
 
   <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-  <script src="index.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
