--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>ChatON</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-  <div class="container">
 
-    <header>🔥 ChatON</header>
+<h1>🔥 ChatON</h1>
 
-    <div class="join-box">
-      <input id="username" placeholder="Username">
-      <button id="join">Join</button>
-      <button id="leave">Leave</button>
-      <button onclick="startVoice()">🎙 Join Voice</button>
-      <button onclick="toggleMute()">🔇 Mute</button>
-    </div>
+<div id="joinBox">
+  <input id="username" placeholder="Enter username" />
+  <button onclick="join()">Join</button>
+  <p id="error"></p>
+</div>
 
-    <div class="users">
-      <h3>👥 In Call</h3>
-      <ul id="users"></ul>
-    </div>
+<div id="chatBox" hidden>
+  <div id="users"></div>
 
-    <div class="chat">
-      <div id="chat" class="messages"></div>
+  <div id="messages"></div>
 
-      <div class="send-box">
-        <input id="msg" placeholder="Message">
-        <button id="send">Send</button>
-      </div>
-    </div>
+  <input id="msg" placeholder="Type message..." />
+  <button onclick="send()">Send</button>
 
-  </div>
+  <br><br>
+  <button onclick="startVoice()">🎙 Join Voice</button>
+</div>
 
-  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-  <script src="app.js"></script>
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
